--- a/Client/index.html
+++ b/Client/index.html
@@ -1,108 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signal Equalizer</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <div id="root">
-      <div class="min-h-screen">
-        <header class="header">
-          <div class="container">
-            <div class="flex items-center justify-between">
-              <div>
-                <h1 class="header-title">Signal Equalizer</h1>
-                <p class="header-subtitle">
-                  Professional Audio Processing & Analysis
-                </p>
-              </div>
-              <div class="header-file-info">
-                <p class="header-file-label"></p>
-                <p class="header-file-name"></p>
-              </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Signal Equalizer</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <div id="root">
+    <div class="min-h-screen">
+      <header class="header">
+        <div class="container">
+          <div class="flex items-center justify-between">
+            <div>
+              <h1 class="header-title">Signal Equalizer</h1>
+              <p class="header-subtitle">
+                Professional Audio Processing & Analysis
+              </p>
+            </div>
+            <div class="header-file-info">
+              <p class="header-file-label"></p>
+              <p class="header-file-name"></p>
             </div>
           </div>
-        </header>
-        <main class="container-main">
-          <div class="card card-backdrop-blur card-dashed mt-6">
-            <input
-              type="file"
-              accept=".json,application/json"
-              class="hidden"
-              id="jsonFile"
-            />
+        </div>
+      </header>
+      <main class="container-main">
+        <div id="uploaderCard" class="card card-backdrop-blur card-dashed mt-6">
+          <input type="file" id="jsonFile" accept=".json,application/json" class="hidden" />
 
-            <div class="file-uploader">
-              <div class="file-uploader-icon">
-                <!-- JSON file icon -->
-                <svg
-                  class="icon-md"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 2h8l5 5v13a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z"
-                  />
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M14 2v6h6"
-                  />
-                  <text
-                    x="8"
-                    y="17"
-                    font-size="6"
-                    font-weight="bold"
-                    fill="currentColor"
-                  >
-                    { }
-                  </text>
-                </svg>
-              </div>
-
-              <div class="file-uploader-text">
-                <h3 class="file-uploader-title">Load JSON Configuration</h3>
-                <p class="file-uploader-subtitle">
-                  Upload a <code>.json</code> file containing signal equalizer
-                  settings
-                </p>
-              </div>
-
-              <button
-                class="btn btn-default btn-lg"
-                onclick="document.getElementById('file-input').click()"
-              >
-                <!-- Upload icon (replacement for Upload component) -->
-                <svg
-                  class="icon-md margin-right-05"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
-                  ></path>
-                </svg>
-                Choose File
-              </button>
+          <div class="file-uploader">
+            <div class="file-uploader-icon">
+              <!-- JSON file icon -->
+              <svg class="icon-md" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M7 2h8l5 5v13a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 2v6h6" />
+                <text x="8" y="17" font-size="6" font-weight="bold" fill="currentColor">
+                  { }
+                </text>
+              </svg>
             </div>
+
+            <div class="file-uploader-text">
+              <h3 class="file-uploader-title">Load JSON Configuration</h3>
+              <p class="file-uploader-subtitle">
+                Upload a <code>.json</code> file containing signal equalizer
+                settings
+              </p>
+            </div>
+
+            <button class="btn btn-default btn-lg" onclick="document.getElementById('jsonFile').click()">
+              <!-- Upload icon (replacement for Upload component) -->
+              <svg class="icon-md margin-right-05" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
+              </svg>
+              Choose File
+            </button>
           </div>
-        </main>
-      </div>
+        </div>
+        <div id="mainApp" style="display: none" class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+          <div class="lg:col-span-2 space-y-6">
+            <div id="input-signal-viewer" class="card card-backdrop-blur signal-viewer">
+
+              <div class="signal-viewer-header">
+                <h3 class="signal-viewer-title">Input Signal</h3>
+                <div class="signal-viewer-duration">No Signal</div>
+              </div>
+
+              <div class="signal-viewer-canvas-wrapper">
+                <canvas id="input-canvas" class="signal-viewer-canvas"></canvas>
+              </div>
+
+              <div class="playback-controls">
+                <div class="playback-controls-group">
+                  <!-- Play / Pause -->
+                  <button class="btn btn-sm btn-default play-btn">
+                   ▶
+                  </button>
+
+                  <!-- Stop -->
+                  <button class="btn btn-secondary btn-sm stop-btn">
+                    ⏹
+                  </button>
+
+                  <!-- Reset -->
+                  <button class="btn btn-secondary btn-sm reset-btn">
+                   ↺
+                  </button>
+
+                  <!-- Mute -->
+                  <button class="btn btn-secondary btn-sm mute-toggle-btn">
+                  🔊
+                  </button>
+                </div>
+
+                <div class="playback-controls-slider">
+                  <span class="playback-controls-label speed-label">Speed: 1x</span>
+                  <input type="range" min="0.25" max="2" step="0.25" value="1" class="speed-slider">
+                </div>
+
+                <div class="playback-controls-zoom">
+                  <!-- Zoom Out -->
+                  <button class="btn btn-secondary btn-sm zoom-out">
+                   -
+                  </button>
+
+                  <span class="playback-controls-zoom-label zoom-label">1x</span>
+
+                  <!-- Zoom In -->
+                  <button class="btn btn-secondary btn-sm zoom-in">
+                  +
+                  </button>
+                </div>
+              </div>
+
+            </div>
+
+            <div id="output-signal-viewer" class="card card-backdrop-blur signal-viewer">
+
+              <div class="signal-viewer-header">
+                <h3 class="signal-viewer-title">Output Signal</h3>
+                <div class="signal-viewer-duration">No Signal</div>
+              </div>
+
+              <div class="signal-viewer-canvas-wrapper">
+                <canvas id="output-canvas" class="signal-viewer-canvas"></canvas>
+              </div>
+
+                 <div class="playback-controls">
+                <div class="playback-controls-group">
+                  <!-- Play / Pause -->
+                  <button class="btn btn-sm btn-default play-btn">
+                   ▶
+                  </button>
+
+                  <!-- Stop -->
+                  <button class="btn btn-secondary btn-sm stop-btn">
+                    ⏹
+                  </button>
+
+                  <!-- Reset -->
+                  <button class="btn btn-secondary btn-sm reset-btn">
+                   ↺
+                  </button>
+
+                  <!-- Mute -->
+                  <button class="btn btn-secondary btn-sm mute-toggle-btn">
+                  🔊
+                  </button>
+                </div>
+
+                <div class="playback-controls-slider">
+                  <span class="playback-controls-label speed-label">Speed: 1x</span>
+                  <input type="range" min="0.25" max="2" step="0.25" value="1" class="speed-slider">
+                </div>
+
+                <div class="playback-controls-zoom">
+                  <!-- Zoom Out -->
+                  <button class="btn btn-secondary btn-sm zoom-out">
+                   -
+                  </button>
+
+                  <span class="playback-controls-zoom-label zoom-label">1x</span>
+
+                  <!-- Zoom In -->
+                  <button class="btn btn-secondary btn-sm zoom-in">
+                  +
+                  </button>
+                </div>
+              </div>
+            </div>
+
+
+
+
+          </div>
+      </main>
     </div>
+  </div>
+  <script type="module" src="scripts/controllers/fileController.js"></script>
 
-    <script src="./scripts/controllers/fileController.js"></script>
-  </body>
+</body>
+
 </html>
