add the time domain viewers of the signals

--- a/Client/index.html
+++ b/Client/index.html
@@ -69,7 +69,7 @@
             <div id="input-signal-viewer" class="card card-backdrop-blur signal-viewer">
 
               <div class="signal-viewer-header">
-                <h3 class="signal-viewer-title">Input Signal</h3>
+                <h3 class="signal-viewer-title"></h3>
                 <div class="signal-viewer-duration">No Signal</div>
               </div>
 
@@ -125,7 +125,7 @@
             <div id="output-signal-viewer" class="card card-backdrop-blur signal-viewer">
 
               <div class="signal-viewer-header">
-                <h3 class="signal-viewer-title">Output Signal</h3>
+                <h3 class="signal-viewer-title"></h3>
                 <div class="signal-viewer-duration">No Signal</div>
               </div>
 
