--- a/Client/index.html
+++ b/Client/index.html
@@ -147,6 +147,58 @@
                   <option value="human_voices">Human Voices</option>
                 </select>
               </div>
+              <!-- Trigger Button -->
+              <button id="open-dialog" class="btn btn-secondary btn-sm w-full space-y-6">
+                <svg class="icon-md" style="margin-right: 0.5rem;" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                  stroke-width="2">
+                  <path d="M12 5v14M5 12h14" />
+                </svg>
+                Add Custom Slider
+              </button>
+              <div id="dialog-overlay" class="dialog-overlay hidden">
+                <div class="dialog-content">
+                  <!-- Close Button -->
+                  <button id="close-dialog" class="btn btn-icon btn-ghost" style="
+                          position: absolute;
+                          right: 1rem;
+                          top: 1rem;
+                          opacity: 0.7;
+                        ">
+                    <svg class="icon-md" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <path d="M18 6L6 18M6 6l12 12" />
+                    </svg>
+                  </button>
+
+                  <div class="flex flex-col space-y-2">
+                    <h2 class="dialog-title">
+                      Add Custom Frequency Slider
+                    </h2>
+                  </div>
+
+                  <form id="add-slider-form" class="space-y-4">
+
+                    <!-- Name (default: Untitled, hidden or editable if you want later) -->
+                    <input id="slider-name" class="input" value="Untitled" />
+
+                    <div class="space-y-6">
+                      <label for="min-freq">Min Frequency (Hz)</label>
+                      <input id="min-freq" type="range" min="20" max="20000" value="200" class="w-full slider-input" />
+                      <div class="text-sm opacity-70" id="min-freq-value">200 Hz</div>
+                    </div>
+
+                    <div class="space-y-6">
+                      <label for="max-freq">Max Frequency (Hz)</label>
+                      <input id="max-freq" type="range" min="20" max="20000" value="2000" class="w-full slider-input" />
+                      <div class="text-sm opacity-70" id="max-freq-value">2000 Hz</div>
+                    </div>
+
+                    <button type="submit" class="btn btn-default btn-md w-full space-y-6">
+                      Add Slider
+                    </button>
+                  </form>
+
+                </div>
+              </div>
               <div class="equalizer-controls space-y-4">
 
 
