add the endpoint of equalizer

--- a/Client/index.html
+++ b/Client/index.html
@@ -204,7 +204,7 @@
 
               </div>
             </div>
-            <button class="btn btn-default btn-lg w-full space-y-6">
+            <button id="apply-eq-btn" class="btn btn-default btn-lg w-full space-y-6">
               Apply Equalizer
             </button>
             <div class="card flex items-center justify-between space-y-6">
