bug in connection seperate audio

--- a/Client/index.html
+++ b/Client/index.html
@@ -145,6 +145,7 @@
                   <option value="musical">Musical Instruments</option>
                   <option value="animal_voices">Animal Sounds</option>
                   <option value="human_voices">Human Voices</option>
+                  <option value="music_model">Music Model</option>
                 </select>
               </div>
               <!-- Trigger Button -->
