--- a/Client/index.html
+++ b/Client/index.html
@@ -112,7 +112,9 @@
 
             </div>
 
-            <div id="Spectrograms"></div>
+            <div id="Spectrograms">
+              
+            </div>
           </div>
           <div id="control-panel" class="space-y-4">
             <div class="card card-backdrop-blur equalizer-panel">
