--- a/Client/panel.html
+++ b/Client/panel.html
@@ -28,8 +28,6 @@
           </div>
         </header>
         <main class="container-main">
-          <!-- Add this right after the uploaderCard div -->
-
           <div id="mainApp" class="grid grid-cols-1 lg:grid-cols-3 gap-6">
             <div class="lg:col-span-2 space-y-6 graphs">
               <div id="time-domain"></div>
@@ -86,9 +84,9 @@
                     <option value="musical">Musical Instruments</option>
                     <option value="animal_voices">Animal Sounds</option>
                     <option value="human_voices">Human Voices</option>
+                    <option value="music_model">Music Model</option>
                   </select>
                 </div>
-                <!-- AI Mode Toggle (only visible for musical mode) -->
                 <div
                   id="ai-mode-container"
                   class="card flex items-center justify-between space-y-6"
@@ -110,75 +108,6 @@
                   id="open-dialog"
                   class="btn btn-secondary btn-sm w-full space-y-6"
                 >
-                  <div id="dialog-overlay" class="dialog-overlay hidden">
-                    <div class="dialog-content">
-                      <!-- Close Button -->
-                      <button
-                        id="close-dialog"
-                        class="btn btn-icon btn-ghost"
-                        style="
-                          position: absolute;
-                          right: 1rem;
-                          top: 1rem;
-                          opacity: 0.7;
-                        "
-                      >
-                        <svg
-                          class="icon-md"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                        >
-                          <path d="M18 6L6 18M6 6l12 12" />
-                        </svg>
-                      </button>
-
-                      <div class="flex flex-col space-y-2">
-                        <h2 class="dialog-title">
-                          Add Custom Frequency Slider
-                        </h2>
-                      </div>
-
-                      <form id="add-slider-form" class="space-y-4">
-                        <div class="space-y-2">
-                          <label for="slider-name">Slider Name</label>
-                          <input
-                            id="slider-name"
-                            class="input"
-                            placeholder="e.g., Custom Band"
-                          />
-                        </div>
-
-                        <div class="space-y-2">
-                          <label for="min-freq">Min Frequency (Hz)</label>
-                          <input
-                            id="min-freq"
-                            class="input"
-                            type="number"
-                            placeholder="e.g., 100"
-                          />
-                        </div>
-
-                        <div class="space-y-2">
-                          <label for="max-freq">Max Frequency (Hz)</label>
-                          <input
-                            id="max-freq"
-                            class="input"
-                            type="number"
-                            placeholder="e.g., 1000"
-                          />
-                        </div>
-
-                        <button
-                          type="submit"
-                          class="btn btn-default btn-md w-full"
-                        >
-                          Add Slider
-                        </button>
-                      </form>
-                    </div>
-                  </div>
                   <svg
                     class="icon-md"
                     style="margin-right: 0.5rem"
@@ -191,11 +120,125 @@
                   </svg>
                   Add Custom Slider
                 </button>
+                <div id="dialog-overlay" class="dialog-overlay hidden">
+                  <div class="dialog-content">
+                    <!-- Close Button -->
+                    <button
+                      id="close-dialog"
+                      class="btn btn-icon btn-ghost"
+                      style="
+                        position: absolute;
+                        right: 1rem;
+                        top: 1rem;
+                        opacity: 0.7;
+                      "
+                    >
+                      <svg
+                        class="icon-md"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                      >
+                        <path d="M18 6L6 18M6 6l12 12" />
+                      </svg>
+                    </button>
+
+                    <div class="flex flex-col space-y-2">
+                      <h2 class="dialog-title">Add Custom Frequency Slider</h2>
+                    </div>
+
+                    <form id="add-slider-form" class="space-y-4">
+                      <!-- Name (default: Untitled, hidden or editable if you want later) -->
+                      <input id="slider-name" class="input" value="Untitled" />
+
+                      <div class="space-y-6">
+                        <label for="min-freq">Min Frequency (Hz)</label>
+                        <input
+                          id="min-freq"
+                          type="range"
+                          min="20"
+                          max="40000"
+                          value="200"
+                          class="w-full slider-input"
+                        />
+                        <div class="text-sm opacity-70" id="min-freq-value">
+                          200 Hz
+                        </div>
+                      </div>
+
+                      <div class="space-y-6">
+                        <label for="max-freq">Max Frequency (Hz)</label>
+                        <input
+                          id="max-freq"
+                          type="range"
+                          min="20"
+                          max="40000"
+                          value="2000"
+                          class="w-full slider-input"
+                        />
+                        <div class="text-sm opacity-70" id="max-freq-value">
+                          2000 Hz
+                        </div>
+                      </div>
+
+                      <button
+                        type="submit"
+                        class="btn btn-default btn-md w-full space-y-6"
+                      >
+                        Add Slider
+                      </button>
+                    </form>
+                  </div>
+                </div>
                 <div class="equalizer-controls space-y-4"></div>
               </div>
-              <button class="btn btn-default btn-lg w-full space-y-6">
-                Apply Equalizer
-              </button>
+              <!-- Replaced Apply button with a hidden suspense div (same size) -->
+              <div
+                id="apply-eq-suspense"
+                class="btn btn-default btn-lg w-full space-y-6"
+                style="
+                  display: none;
+                  align-items: center;
+                  justify-content: center;
+                "
+              >
+                <svg
+                  class="icon-md loading-spinner"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                  style="margin-right: 0.5rem"
+                >
+                  <circle cx="12" cy="4" r="2">
+                    <animate
+                      attributeName="cy"
+                      values="4;12;4"
+                      dur="1s"
+                      repeatCount="indefinite"
+                    />
+                  </circle>
+                  <circle cx="12" cy="12" r="2">
+                    <animate
+                      attributeName="cy"
+                      values="12;20;12"
+                      dur="1s"
+                      repeatCount="indefinite"
+                      begin="0.1s"
+                    />
+                  </circle>
+                  <circle cx="12" cy="20" r="2">
+                    <animate
+                      attributeName="cy"
+                      values="20;12;20"
+                      dur="1s"
+                      repeatCount="indefinite"
+                      begin="0.2s"
+                    />
+                  </circle>
+                </svg>
+                <span>Processing...</span>
+              </div>
               <div class="card flex items-center justify-between space-y-6">
                 <label for="show-spectrograms">Show Spectrograms</label>
                 <label class="switch">
