connect the ai model of the music

--- a/Client/index.html
+++ b/Client/index.html
@@ -107,7 +107,7 @@
           <!-- Add this right after the uploaderCard div -->
           <div
             id="loadingSuspense"
-            class="card card-backdrop-blur card-dashed mt-6"
+            class="card card-backdrop-blur card-dashed mt-6 upload"
             style="display: none"
           >
             <div class="file-uploader">
@@ -224,7 +224,6 @@
                     <option value="musical">Musical Instruments</option>
                     <option value="animal_voices">Animal Sounds</option>
                     <option value="human_voices">Human Voices</option>
-                    <option value="music_model">Music Model</option>
                   </select>
                 </div>
                 <div
