update the readme

--- a/Client/index.html
+++ b/Client/index.html
@@ -16,9 +16,7 @@
             <div class="flex items-center justify-between">
               <div>
                 <h1 class="header-title">HarmoniX</h1>
-                <p class="header-subtitle">
-                  Professional Audio Processing & Analysis
-                </p>
+                <p class="header-subtitle">AI-Powered Real-Time Equalizer</p>
               </div>
               <div class="header-file-info">
                 <p class="header-file-label"></p>
